@@ -47,10 +47,10 @@ namespace {
 		SETTING_STRING(control_admins, 0, "control-admins", "control_admins", "")
 		SETTING_STRING(account_path, 0, NULL, "account_dir", "data")
 		SETTING_STRING(blueprint_path, 0, NULL, "blueprint_dir", "data")
-		SETTING_STRING(ai_path, 0, NULL, "ai_dir", "scripts")
+		SETTING_STRING(ai_path, 0, NULL, "ai_dir", "scripts/ai")
 		SETTING_STRING(zone_path, 0, NULL, "zone_dir", "data")
 		SETTING_STRING(player_path, 0, NULL, "player_dir", "data")
-		SETTING_STRING(help_path, 0, NULL, "help_dir", "data")
+		SETTING_STRING(help_path, 0, NULL, "help_dir", "data/help")
 		SETTING_STRING(scripts_path, 0, NULL, "script_dir", "scripts")
 		SETTING_STRING(world_path, 0, NULL, "world_dir", "data")
 		SETTING_STRING(misc_path, 0, NULL, "misc_dir", "data")
